fixing centering on mobile for mywork

--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,6 @@ p {
     text-align: left;
     margin: 1em;
     color: white;
-    margin-bottom: 25px;
     margin-left: 2rem;
 }
 
@@ -240,5 +239,18 @@ p {
         width: 0%;
         margin-left: 0px;
         margin-right: 0px;
+    }
+    .boxed {
+        margin-bottom: 2rem;
+    }
+    .name {
+        margin-right: 2rem;
+    }
+    .boxed>img {
+        margin-left: 0rem;
+    }
+    .boxed>.mobile-img {
+        margin-left: 10px;
+        margin-right: 10px;
     }
 }
